<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#f1eded"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     tools:layout_editor_absoluteY="25dp">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/Cadastro_show_Image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:onClick="imageclick"
                app:civ_border_color="#EEEEEE"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                app:civ_shadow_color="#8BC34A"
                app:civ_shadow_radius="10"
                app:srcCompat="@drawable/person" />


            <EditText
                android:id="@+id/CNome"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/butoon_xml"
                android:drawableLeft="@drawable/ic_pessoa_cinza_24dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/Nome"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="8dp"
                android:textColor="#333333"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/Cadastro_editEmail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/butoon_xml"
                android:drawableLeft="@drawable/ic_email_cinza_24dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="8dp"
                android:textColor="#333333"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/Cadastro_editTelefone"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/butoon_xml"
                android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/Telefone"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:paddingRight="8dp"
                android:textColor="#333333"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/Senha"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/butoon_xml"
                    android:drawableLeft="@drawable/ic_cadeado_cinza_24dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_cadeado_cinza_24dp"
                    android:ems="10"
                    android:hint="@string/Senha"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="8dp"
                    android:textColor="#333333"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTelefone2" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/CSenha"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/butoon_xml"
                    android:drawableLeft="@drawable/ic_cadeado_cinza_24dp"
                    android:drawableStart="@drawable/ic_cadeado_cinza_24dp"
                    android:hint="@string/Confirmar_senha"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="8dp"
                    android:textColor="#333333" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/Cadastro_buttonCadastrar"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/butoon_xml"
                android:text="@string/Cadastrar"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/Cadastro_login"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/butoon_xml"
                android:gravity="center"
                android:onClick="btEntrar"
                android:text="@string/Termos_de_uso"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonCadastrar"
                app:layout_constraintVertical_bias="0.0" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>
