<?xml version="1.0" encoding="utf-8"?><!-- item_feed.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:ignore="NamespaceTypo"
    card_view:cardCornerRadius="4dp">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">
        <com.jcminarro.roundkornerlayout.RoundKornerFrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:corner_radius="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/MaisCurreculum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp">

                        <com.vincan.rotatecircleimageview.RotateCircleImageView
                            android:id="@+id/Image_Cureeculm"
                            android:layout_width="118dp"
                            android:layout_height="100dp"
                            android:src="@drawable/person"
                            ads:rciv_border_colors="@array/titles"
                            ads:rciv_border_padding="2dp"
                            ads:rciv_border_style="rotate"
                            ads:rciv_border_width="2dp" />

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="57dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/name_Cureeculm"
                                android:layout_width="match_parent"
                                android:layout_height="31dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentTop="true"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:paddingLeft="20dp"
                                android:text="@string/Nome"
                                android:textColor="@color/text_like_counter" />

                            <TextView
                                android:id="@+id/Profissao_Cureeculm"
                                android:layout_width="201dp"
                                android:layout_height="35dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:paddingLeft="5dp"
                                android:text="@string/Profissao"
                                android:textSize="12sp"
                                android:textStyle="italic" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="43dp"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/Cidade_Cureeculm"
                                android:layout_width="80dp"
                                android:layout_height="30dp"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/CidadeP"
                                android:textSize="12sp"
                                android:textStyle="italic" />

                            <TextView
                                android:id="@+id/Estado_Cureeculm"
                                android:layout_width="73dp"
                                android:layout_height="30dp"
                                android:layout_alignParentBottom="true"
                                android:layout_toEndOf="@+id/Cidade_Cureeculm"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/Estado"
                                android:textSize="12sp"
                                android:textStyle="italic" />

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>
        </com.jcminarro.roundkornerlayout.RoundKornerFrameLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>